testdata/baselines/reference/submodule/compiler/jsxElementTypeLiteralWithGeneric.errors.txt
jsxElementTypeLiteralWithGeneric.tsx(2,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.
jsxElementTypeLiteralWithGeneric.tsx(8,25): error TS2694: Namespace '(Missing).JSX' has no exported member 'IntrinsicElements'.
jsxElementTypeLiteralWithGeneric.tsx(8,59): error TS2694: Namespace '(Missing).JSX' has no exported member 'IntrinsicElements'.
jsxElementTypeLiteralWithGeneric.tsx(11,9): error TS2538: Type 'symbol' cannot be used as an index type.
jsxElementTypeLiteralWithGeneric.tsx(11,19): error TS2694: Namespace '(Missing).JSX' has no exported member 'IntrinsicElements'.


==== jsxElementTypeLiteralWithGeneric.tsx (5 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import * as React from "react";
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    declare global {
      namespace JSX {
        type ElementType<P = any> =
          | {
            [K in keyof JSX.IntrinsicElements]: P extends JSX.IntrinsicElements[K]
                            ~~~~~~~~~~~~~~~~~
!!! error TS2694: Namespace '(Missing).JSX' has no exported member 'IntrinsicElements'.
                                                              ~~~~~~~~~~~~~~~~~
!!! error TS2694: Namespace '(Missing).JSX' has no exported member 'IntrinsicElements'.
            ? K
            : never;
          }[keyof JSX.IntrinsicElements]
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2538: Type 'symbol' cannot be used as an index type.
                      ~~~~~~~~~~~~~~~~~
!!! error TS2694: Namespace '(Missing).JSX' has no exported member 'IntrinsicElements'.
          | React.ComponentType<P>;
      }
    }
    
    // should be fine - `ElementType` accepts `div`
    let a = <div />;
    
    // Should be an error.
    // `ruhroh` is in neither `IntrinsicElements` nor `ElementType`
    let c = <ruhroh />;
    